--- a/templates/medicblog/home.html
+++ b/templates/medicblog/home.html
@@ -1,5 +1,8 @@
 {% extends 'medicblog/base.html' %}
 
+
 {% block content %}
-<h2> You are welcome to the Chasfat Medical Blog </h2>
+    <h1> Hi, welcome to the home page  </h1>
+    
 {% endblock content %}
+    
