--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,7 +12,7 @@
     {% csrf_token %}
     {{ form.as_p }}
    <button type="submit"> Login </button>
-    </form
+</form>
     
 {% endblock content %}
 
