--- a/templates/home.html
+++ b/templates/home.html
@@ -29,6 +29,8 @@
 
         {% else %}
         <h1> Welcome to the Outstanding Chasfat Projects </h1>
+        <p> You can also Login from here </p>
+        <a href="{% url 'login' %}"> Login </a>
 
         {% endif %}
        
