--- a/templates/medicblog/base.html
+++ b/templates/medicblog/base.html
@@ -6,70 +6,85 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Chasfat | Medical blog</title>
         <link rel="stylesheet" type="text/css" href="{% static 'css/medicblog/base.css' %}">
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="styleshee\
-t">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+
     </head>
 <body>
-    <header>
-        <div class="nav-left">
-            <h1> Chasfat Medical Blog </h1>
+  
+    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Chasfat Medical Blog</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+
+            <!-- Lets control what the user sees based on the authentication -->
+
+            {% if user.is_authenticated %}
+
+            
+
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'medicblog:home' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'medicblog:create' %}">Create Post</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout </a>
+            </li>
+
+             
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+            {% else %}
+            
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'medicblog:home' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:signup'%}">Sign Up</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login </a>
+            </li>
+
+            {% endif %}
+           
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
         </div>
-        
-    </header>
-
-    {% if user.is_authenticated %}
-    <h3> Welcome Dr {{ user.username }} </h3> 
-    <div class="nav-right">
-        <a href="{% url 'medicblog:create' %}"> Create New Post </a>
-
-    </div>
-
-
+      </nav>
+   
+<div class="container">
     
     {% block content %}
 
     {% endblock content %}
+</div>
 
     
-    <p> <a href="{% url 'logout' %}"> Logout </a> </p>
-
-
-
-
-
-    
-
    
-
-    {% else %}
-    <p> You are not logged in </p>
-    <a href="{% url 'login' %}"> Login </a>
-
-    {% endif %}
-
-
-
-    
-</body>
-</html>
-
-
-{% comment %}
-    <nav class="nav nav-pills nav-fill">
-  <a class="nav-item nav-link active" href="#">Active</a>
-  <a class="nav-item nav-link" href="#">Link</a>
-  <a class="nav-item nav-link" href="#">Link</a>
-  <a class="nav-item nav-link disabled" href="#">Disabled</a>
-</nav>
-{% endcomment %}
     
 
 
-
-{% comment %}
-For Bootstrap 
-     <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
 <!-- jQuery library -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
@@ -79,6 +94,12 @@ For Bootstrap
 
 <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script> 
-{% endcomment %}
+
     
+
+
+    
+</body>
+</html>
+
 
