--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
         {% else %}
         <h1> Welcome to the Outstanding Chasfat Projects </h1>
         <p> You can also Login from here </p>
-        <a href="{% url 'login' %}"> Login </a>
+        <a href="{% url 'accounts:login' %}"> Login </a>
 
         {% endif %}
        
