--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -1,14 +1,31 @@
+
 {% extends 'medicblog/base.html' %}
+
 
 
 
 {% block content %}
 
-<form method="POST">
+<p>{{form.errors}}</p> 
+
+<div class="row justify-content-center">
+    
+    <div class="col-md-6">
+        <h3> Registration </h3>
+<form method="POST" class="my-4">
+
     {% csrf_token %}
-    {{ form.as_p }}
+    {% comment %} {{ form.as_p }} {% endcomment %}
+
+    
+        {{ form.as_p}}
+
+    
     <button type="submit" class="btn btn-secondary"> Sign Up </button>
 </form>
+</div>
+
+</div>
     
 {% endblock content %}
     
