--- a/templates/medicblog/base.html
+++ b/templates/medicblog/base.html
@@ -13,8 +13,8 @@
 <body>
   
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Chasfat Medical Blog</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand text-light" href="#">Chasfat Medical Applications</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,19 +29,19 @@
             
 
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'medicblog:home' %}">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link text-light" href="{% url 'medicblog:home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'medicblog:create' %}">Create Post</a>
+                <a class="nav-link text-light" href="{% url 'medicblog:create' %}">Create Post</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Logout </a>
+                <a class="nav-link text-light" href="{% url 'accounts:logout' %}">Logout </a>
             </li>
 
              
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dropdown
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -54,13 +54,13 @@
             {% else %}
             
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'medicblog:home' %}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link text-light" href="{% url 'medicblog:home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'accounts:signup'%}">Sign Up</a>
+                <a class="nav-link text-light" href="{% url 'accounts:signup'%}">Sign Up</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Login </a>
+                <a class="nav-link text-light" href="{% url 'accounts:login' %}">Login </a>
             </li>
 
             {% endif %}
