--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -4,10 +4,12 @@
 {% block content %}
 <h2> Sign Up </h2>
 
-<form method="POST">
+<form method="POST" class="form">
 
     {% csrf_token %}
-    {{ form.as_p }}
+
+   {{ form.as_p }}   
+  
     <button type="submit"> Sign up </button>
 </form>
     
