--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -12,7 +12,7 @@
             </div>
             <div class="card-body">
                 <p> Check the LMS Application by clicking the link below </p>
-                <a href="{% url 'lmsapp:home' %}" class="btn btn-success btn-lg"> Go to LMS App</a>
+                <a href="{% url 'lmsapp:home' %}" class="btn btn-primary btn-sm"> Go to LMS App</a>
 
             </div>
             <div class="card-footer">
@@ -29,7 +29,7 @@
             </div>
             <div class="card-body">
                 <p> Check the DoctorAPI App by clicking the link below </p>
-                <a href="{% url 'doctorapi:doctor-list' %}" class="btn btn-success btn-lg"> Go to LMS App</a>
+                <a href="{% url 'doctorapi:doctor-list' %}" class="btn btn-secondary btn-sm"> Go to Doctors API</a>
 
             </div>
             <div class="card-footer">
@@ -46,7 +46,7 @@
             </div>
             <div class="card-body">
                 <p> Check the MedicBlog Application by clicking the link below </p>
-                <a href="{% url 'medicblog:home' %}" class="btn btn-success btn-lg"> Go to LMS App</a>
+                <a href="{% url 'medicblog:home' %}" class="btn btn-primary btn-sm"> Go to Medic Blog</a>
 
             </div>
             <div class="card-footer">
