--- a/templates/lmsapp/home.html
+++ b/templates/lmsapp/home.html
@@ -1,13 +1,122 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LMS Application </title>
-</head>
-<body>
+{% load static %}
+<!-- templates/base.html -->
+<html>
+    <head>
+        <meta charser="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Chasfat | LMS App</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/lmsapp/home.css' %}">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.10.0/main.min.css">
+       
+        
+        
+        <script src="{% static 'js/lmsapp/calendar.js' %}"></script>
+
+    </head>
+<body class="main">
+  
     
-    <h2> Welcome fully now to the LMS APplication </h2>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand text-light" href="#">Chasfat|Learning Management System </a>
+        <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+
+            <!-- Lets control what the user sees based on the authentication -->
+
+            {% if user.is_authenticated %}
+
+            
+
+            <li class="nav-item active">
+              <a class="nav-link text-light" href="{% url 'medicblog:home' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link text-light" href="{% url 'lmsapp:dashboard' %}">Dashboard </a>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="btn btn-primary">
+                    Notifications <span class="badge badge-light">4</span>
+                  </button
+            </li>
+           
+            <li class="nav-item">
+                <a class="nav-link text-light" href="{% url 'accounts:logout' %}">Logout </a>
+            </li>
+
+             
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dashboard
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Profile</a>
+                <a class="dropdown-item" href="#">Grades</a>
+                <a class="dropdown-item" href="#">Messages</a>
+                <a class="dropdown-item" href="#">Preferences</a>
+
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Logout</a>
+              </div>
+            </li>
+            {% else %}
+            
+            <li class="nav-item active">
+                <a class="nav-link text-light" href="{% url 'medicblog:home' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="{% url 'accounts:signup'%}">Sign Up</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="{% url 'accounts:login' %}">Login </a>
+            </li>
+            <li class="nav-item">
+                <p> Ooops !!! You are not logged in.</p>
+            </li>
+
+            {% endif %}
+           
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+   
+<div class="container">
+    
+    {% block content %}
+
+    {% endblock content %}
+</div>
+
+    
+   
+    
+
+
+
+<!-- jQuery library -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script> 
+
+    
+
+
+    
 </body>
 </html>
+
+
