--- a/templates/blogapp/post_detail.html
+++ b/templates/blogapp/post_detail.html
@@ -7,10 +7,11 @@
 
 {% block content %}
 
-<h1> Full Posts </h1>
+<h1 class="text-jumbotron"> Full Posts </h1>
+<a class="btn btn-sm btn-transparent" href="{% url 'blogapp:post_list'%}">Return to Home Page </a>
 {% if post %}
 <h2> 
-    <a href="{{post.get_absolute_url}}"> {{post.title}} </a>
+    <a href="{{post.get_absolute_url}}" class="btn btn-sm btn-secondary"> {{post.title}} </a>
 </h2>
 <p class="date">
     Published {{post.publish}} by {{post.author }}
@@ -20,7 +21,7 @@
 </p>
 <p>
 
-    <a href="{% url 'blogapp:post_share' post.id %}"> Share this Post</a>
+    <a href="{% url 'blogapp:post_share' post.id %}" class="btn btn-sm btn-primary"> Share this Post</a>
 </p>
 
 <p>
@@ -49,8 +50,8 @@
     {% if new_comment %}
         <h2> Your comment has been added. </h2>
         {% else %}
-        <h3> Add a new comment </h3>
-        <form method="POST">
+        <h3 class="text-center"> Add a new comment </h3>
+        <form class="form" method="POST">
             {{ comment_form.as_p }}
             {% csrf_token %}
             <p> <input type="submit" value="Add Comment"></p>
@@ -58,6 +59,20 @@
 
     {% endif %}
 </p>
+<p>
+        <h3> Similar Posts </h3>
+        {% for post in similar_posts %}
+                <p>
+                    <a href="{{post.get_absolute_url}}">{{post.title}}</a>
+                </p>
+                {% empty %}
+                There are no similar posts yet 
+                
+
+
+        {% endfor %}
+</p>
+
 {% endif %}
 
 
