--- a/templates/blogapp/post_list.html
+++ b/templates/blogapp/post_list.html
@@ -1,4 +1,11 @@
 {% extends 'blogapp/base.html' %}
+<!-- Loading Custom Tags -->
+{% load custom_blogapp_tags %}
+{% show_recent_posts %}
+
+<!--Custom tag filters-->
+{% load custom_blogapp_filters %}
+
 
 {% block title %}
 
@@ -6,17 +13,39 @@
 {% endblock %}
 
 {% block content %}
+<p> {{ "hello" | capitalize_letter }} </p>
 
     {% if posts %}
+    {% if tag %}
+        <h2> Posts tagged with "{{ tag.name}}" </h2>
+    {% endif %}
             {% for post in posts %}
-                <h2> 
+                <h2 class="text-jumbotron"> 
                     <a href="{{post.get_absolute_url}}"> {{post.title}} </a>
                 </h2>
+                <hr/>
                 <p class="date">
                     Published {{post.publish}} by {{post.author }}
                 </p>
                 <p>
                     {{ post.body|truncatewords:30|linebreaks}}
+                </p>
+                <p class="tags">
+                    <!--Tags: {{post.tags.all|join:","}} -->
+                    {% for tag in post.tags.all %}
+
+                        <a href="{% url 'blogapp:post_list_by_tag' tag.slug %}">
+                            {{ tag.name }}
+                        </a>
+                        {% if not forloop.last %}, {% endif %}
+
+
+                    {% endfor %}
+                
+                </p>
+                <p>
+                    Recent Posts 
+                    {% show_recent_posts %} <!--- Inclusion tag function in our template tags -->
                 </p>
 
             {% endfor %}
