--- a/static/css/blogapp/home.css
+++ b/static/css/blogapp/home.css
@@ -1,6 +1,7 @@
 *{
  padding:0;
  margin:0;
+ font-weight:bold;
  
 
 }
@@ -21,6 +22,9 @@ body{
     justify-content:space-between;
   
     gap:2;
+}
+a{
+    text-decoration:none;
 }
 h2 a{
     text-decoration:none;
