--- a/templates/blogapp/base.html
+++ b/templates/blogapp/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% load custom_blogapp_tags %}
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,7 +33,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'blogapp:post_list'%}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
@@ -51,6 +52,10 @@
                 </ul>
               </li>
             </ul>
+            <form class="d-flex" role="search" action="{% url 'blogapp:post_search'%}">
+              <input class="form-control me-2" name="query" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
           </div>
         </div>
       </nav>
@@ -64,6 +69,11 @@
         <div class="sidebar">
             <h2> My Blog </h2>
             <p> This is my blog , I've written {% total_posts %} posts so far. </p> 
+            <p>
+              Recent Posts 
+              {% show_recent_posts %} <!--- Inclusion tag function in our template tags -->
+          </p>
+
             <p>
                 <a href="{% url 'blogapp:post_feed' %}"> Subscribe to my RSS Feed  </a>
             </p>
