--- a/templates/blogapp/post_detail.html
+++ b/templates/blogapp/post_detail.html
@@ -8,16 +8,16 @@
 {% block content %}
 
 <h1 class="text-jumbotron"> Full Posts </h1>
-<a class="btn btn-sm btn-transparent" href="{% url 'blogapp:post_list'%}">Return to Home Page </a>
+<a class="btn btn-sm btn-secondary" style="width:fit-content;" href="{% url 'blogapp:post_list'%}">Return to Home Page </a>
 {% if post %}
 <h2> 
-    <a href="{{post.get_absolute_url}}" class="btn btn-sm btn-secondary"> {{post.title}} </a>
+    {{post.title}} 
 </h2>
 <p class="date">
     Published {{post.publish}} by {{post.author }}
 </p>
 <p>
-    {{ post.body }}
+    {{ post.body|linebreaks }}
 </p>
 <p>
 
@@ -54,16 +54,17 @@
         <form class="form" method="POST">
             {{ comment_form.as_p }}
             {% csrf_token %}
-            <p> <input type="submit" value="Add Comment"></p>
+            <p> <input type="submit" class="btn btn-sm btn-success" value="Add Comment"></p>
         </form>
 
     {% endif %}
 </p>
 <p>
+    {% if similar_posts %}
         <h3> Similar Posts </h3>
         {% for post in similar_posts %}
                 <p>
-                    <a href="{{post.get_absolute_url}}">{{post.title}}</a>
+                    <a class="btn btn-sm btn-success" style="width:fit-content;" href="{{post.get_absolute_url}}">{{post.title}}</a>
                 </p>
                 {% empty %}
                 There are no similar posts yet 
@@ -71,6 +72,7 @@
 
 
         {% endfor %}
+        {% endif %}
 </p>
 
 {% endif %}
