--- a/templates/blogapp/base.html
+++ b/templates/blogapp/base.html
@@ -30,17 +30,24 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+          <!--
+              
+
+          -->
+        {% if request.user.is_authenticated %}
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
+              
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'blogapp:post_list'%}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="{% url 'blogapp:create_post' %}">Create Post</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="{% url 'blogapp:user_posts' %}">My Posts</a>
               </li>
+             
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown link
@@ -51,12 +58,46 @@
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li>
+             
             </ul>
             <form class="d-flex" role="search" action="{% url 'blogapp:post_search'%}">
               <input class="form-control me-2" name="query" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
+            <ul class="navbar-nav justify-right">
+              <li class="nav-item">
+                <span class="nav-link">Welcome, {{ user.username }}</span>
+            </li>
+            <li class="nav-item">
+              <form action="{% url 'blogapp:logout' %}" method="post">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-sm btn-danger">Logout</button>
+            </form>
+             
+            </li>
+            </ul>
+
           </div>
+          
+          {% else %}
+          
+             <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'blogapp:register' %}">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'blogapp:login' %}">Login</a>
+              </li>
+
+            </ul>
+          </div>
+          
+        {% endif %}
+        
+         
+         
+
         </div>
       </nav>
       <div class="main">
@@ -79,6 +120,12 @@
             </p>
         </div>
 </div>
+
+{% block javascript %}
+<script>
+</script>
+
+{% endblock %}
    
 </body>
 </html>
