--- a/templates/blogapp/post_detail.html
+++ b/templates/blogapp/post_detail.html
@@ -22,6 +22,9 @@
 <p>
 
     <a href="{% url 'blogapp:post_share' post.id %}" class="btn btn-sm btn-primary"> Share this Post</a>
+    <a href="{% url 'blogapp:edit_post' post.pk %}" class="btn btn-sm btn-warning"> Edit Post</a>
+    <a href="{% url 'blogapp:delete_post' post.pk %}" class="btn btn-sm btn-danger"> Delete Post</a>
+    
 </p>
 
 <p>
