--- a/templates/blogapp/post_list.html
+++ b/templates/blogapp/post_list.html
@@ -31,9 +31,9 @@
                 <p class="tags">
                 <!-- {{post.tags.all|join:","}} -->
 
-
+                    Tags:
                    {% for tag in post.tags.all %}
-                   <a href="{% url 'blogapp:related_posts' tag.id %}">{{ tag.name }}</a>
+                   <a href="{% url 'blogapp:related_posts' tag.id %}">#{{ tag.name }}</a>
                    {% if not forloop.last %}, {% endif %}
                  {% endfor %}
                    
