--- a/templates/blogapp/home.html
+++ b/templates/blogapp/home.html
@@ -9,7 +9,9 @@
 
 {% block content %}
 
-<h3>Welcome to the Home Page </h3> 
+<div class="col-md-9 offset-md-3">
+    <h3>Welcome to Chasfat Blog application  </h3>
+</div> 
 
 
 {% endblock %}
